Working on building data layer, added Dockerfile